<resources>
    <string name="app_name">Pay It Forward</string>
    <string name="remember_password">Remember Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="i_agree_to_the_terms_of_services_and_privacy_policy">I agree to the Terms of Services and Privacy Policy.</string>
    <string name="google">Google</string>
    <string name="message">Message</string>
    <string name="_00_00">00:00</string>
    <string name="search">search</string>
    <string name="y">Y</string>
    <string name="m">Last Month</string>
    <string name="w">Last Week</string>
    <string name="d">D</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="points">Points</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take">Take</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="all">All</string>
    <string name="get">Get</string>
    <string name="give">Give</string>
    <string name="deadline">Deadline</string>
    <string name="_25_03_2022">25.03.2022</string>
    <string name="buy_cake_and_deliver">Buy cake and deliver</string>
    <string name="_10">10</string>
    <string name="author">Author:</string>
    <string name="vasiliy_pupkin">Vasiliy Pupkin</string>
    <string name="my_friend_in_another_city_has_a_birthday_please_buy_him_a_cake">My friend in another city has a birthday, please buy him a cake</string>
    <string name="cancel">Cancel</string>
    <string name="create_deed">Create deed</string>
    <string name="done">Done</string>
    <string name="chat">Chat</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="security">Security</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="about">About</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_edit_proffile">EditProffileActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="about_text">\n\n\nThe idea is to take the idea from the film of the same name and use Firebase as a backend to implement something like a hybrid of duolingo and freelance.ru.</string>

    <string name="title_activity_task">TaskActivity</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_name">Task name</string>
    <string name="_50">50</string>
    <string name="hey_this_application_was_made_by_students_of_the_higher_school_of_economics">Hey! This application was made by students of the Higher School of Economics\n\n</string>
    <string name="chizhova_maria_npotryasaeva_anna_nshelukhinaekaterina">Chizhova Maria\nPotryasaeva Anna\nShelukhina Ekaterina</string>
    <string name="additional_photos">Additional Photos</string>
</resources>
