<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_menu"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icon_chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/menu_statistics"
            android:title="@string/statistics" />
    </group>
    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/icon_settings"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>
</menu>