<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.payitforward.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.payitforward.ui.chat.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.example.payitforward.ui.statistics.StatisticsFragment"
        android:label="@string/statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.payitforward.ui.settings.SettingsFragment"
        android:label="@string/settings" />


</navigation>