<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#A5A6F6"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_gravity="bottom"
            android:background="#00C4C4C4"
            android:textAllCaps="false"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/Title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="About" />

        <Button
            android:id="@+id/button_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_gravity="bottom"
            android:background="#00C4C4C4"
            android:textAllCaps="false"
            android:text="@string/done" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/nav_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingTop="0dp">
        <TextView
            android:id="@+id/about_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text"/>
    </LinearLayout>



</RelativeLayout>