<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".StatisticsActivity">

    <LinearLayout
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        android:layout_height="30dp"
        android:background="@drawable/rounded_button_light_pink"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Day"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/d"/>

        <View
            android:id="@+id/sep_1"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:background="#C4C4C4"/>

        <TextView
            android:id="@+id/Week"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/rounded_button_pink"
            android:text="@string/w"/>

        <View
            android:id="@+id/sep_2"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:background="#C4C4C4"/>

        <TextView
            android:id="@+id/Month"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/m"/>

        <View
            android:id="@+id/sep_3"
            android:layout_width="1dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:background="#C4C4C4"/>

        <TextView
            android:id="@+id/Year"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/y"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time">

        <com.scichart.charting.visuals.SciChartSurface
            android:id="@+id/surface"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentTop="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chart"
        android:background="#00C4C4C4"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_gray"
            android:hint="@string/search"
            android:paddingLeft="16dp"
            android:paddingTop="5dp"
            android:paddingRight="16dp"
            android:paddingBottom="5dp" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="15dp"
            android:background="#00C4C4C4"
            ads:srcCompat="@drawable/icons_search_32" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        tools:ignore="MissingClass" />

</RelativeLayout>