<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateDeedActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/changePhoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icons_change_user_100"
        android:layout_marginLeft="130dp"
        android:layout_marginTop="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changePhoto"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        tools:ignore="MissingClass">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/title"
            android:textColor="#8F8686"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:paddingBottom="20dp" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/description"
            android:textColor="#8F8686"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:paddingBottom="20dp" />

        <TextView
            android:id="@+id/pointsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/points"
            android:textColor="#8F8686"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:max="100"
            android:min="0"
            android:progress="10" />

        <View
            android:id="@+id/sep"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#8F8686"/>

        <TextView
            android:id="@+id/deadlineTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/deadline"
            android:textColor="#8F8686"
            android:textSize="16sp" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

</RelativeLayout>